--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "twilio-run --env"
   },
   "devDependencies": {
-    "twilio-run": "^2.0.0"
+    "twilio-run": "^2.0.0",
+    "axios": "^0.26.1",
+    "query-string": "^7.1.1",
   },
   "engines": {
     "node" : ">=8.0.0 <11.0.0" 
