--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "twilio-run": "^2.0.0",
     "axios": "^0.26.1",
-    "query-string": "^7.1.1",
+    "query-string": "^7.1.1"
   },
   "engines": {
     "node" : ">=8.0.0 <11.0.0" 
